[gd_scene load_steps=32 format=2]

[ext_resource path="res://Enemy/Slime/Slime.gd" type="Script" id=1]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-0.png" type="Texture" id=2]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-1.png" type="Texture" id=3]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-2.png" type="Texture" id=4]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-idle-3.png" type="Texture" id=5]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-0.png" type="Texture" id=6]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-1.png" type="Texture" id=7]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-2.png" type="Texture" id=8]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-move-3.png" type="Texture" id=9]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-0.png" type="Texture" id=10]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-1.png" type="Texture" id=11]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-2.png" type="Texture" id=12]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-3.png" type="Texture" id=13]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-attack-4.png" type="Texture" id=14]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-0.png" type="Texture" id=15]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-1.png" type="Texture" id=16]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-2.png" type="Texture" id=17]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-die-3.png" type="Texture" id=18]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-0.png" type="Texture" id=19]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-1.png" type="Texture" id=20]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-2.png" type="Texture" id=21]
[ext_resource path="res://Enemy/Slime/Individual Sprites/slime-hurt-3.png" type="Texture" id=22]
[ext_resource path="res://Enemy/Slime/sounds/qubodupSlimeMonster-idle1.ogg" type="AudioStream" id=23]
[ext_resource path="res://Enemy/Slime/sounds/qubodupSlimeMonster-attack1.ogg" type="AudioStream" id=24]
[ext_resource path="res://Enemy/Slime/sounds/qubodupSlimeMonster-damage1.ogg" type="AudioStream" id=25]
[ext_resource path="res://Enemy/Slime/sounds/qubodupSlimeMonster-damage2.ogg" type="AudioStream" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "move",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": true,
"name": "attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ) ],
"loop": true,
"name": "die",
"speed": 4.0
}, {
"frames": [ ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ), ExtResource( 22 ) ],
"loop": true,
"name": "hurt",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.521569, 0.0117647, 0.0117647, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.231373, 0.0509804, 0.0509804, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="StyleBoxFlat" id=4]
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4.50776, 10 )

[node name="Slime" type="KinematicBody2D" groups=[
"save",
]]
scale = Vector2( 0.5, 0.5 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 1 )

[node name="sprite" type="AnimatedSprite" parent="."]
position = Vector2( -6.24947, -14.4806 )
scale = Vector2( 2, 2 )
frames = SubResource( 1 )
animation = "hurt"
frame = 3
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 2 )

[node name="healthbar" type="ProgressBar" parent="."]
margin_left = -19.0
margin_top = -38.0
margin_right = 18.0
margin_bottom = -24.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
value = 100.0
percent_visible = false

[node name="HPlable" type="Label" parent="."]
margin_left = -15.2261
margin_top = -34.3939
margin_right = 37.7739
margin_bottom = -20.3939
rect_scale = Vector2( 0.5, 0.5 )
text = "100/100"
align = 1
valign = 1

[node name="check_place" type="RayCast2D" parent="."]
position = Vector2( -28, 0 )
scale = Vector2( 1, 2.04 )
enabled = true
exclude_parent = false
cast_to = Vector2( 0, 5 )

[node name="attack_area" type="Area2D" parent="."]

[node name="attack_col" type="CollisionShape2D" parent="attack_area"]
position = Vector2( -20, 0 )
shape = SubResource( 5 )

[node name="Visible" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 2

[node name="visible_col" type="CollisionShape2D" parent="Visible"]

[node name="sound_idle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 23 )
volume_db = 1.0
max_distance = 200.0

[node name="sound_attack" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 24 )
volume_db = 1.0
max_distance = 200.0

[node name="damage" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 25 )
volume_db = 1.0
max_distance = 200.0

[node name="damage2" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 26 )
volume_db = 1.0
max_distance = 200.0
[connection signal="animation_finished" from="sprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="sprite" to="." method="_on_sprite_frame_changed"]
[connection signal="body_entered" from="attack_area" to="." method="_on_attack_area_body_entered"]
[connection signal="body_exited" from="attack_area" to="." method="_on_attack_area_body_exited"]
[connection signal="body_entered" from="Visible" to="." method="_on_Visible_body_entered"]
[connection signal="body_exited" from="Visible" to="." method="_on_Visible_body_exited"]
